TodoList , Rezervasyon İleri Gün Ayarları Eklendi (Üye Ant Ayrımı Yapıldı)

--- a/AtkTennis/Views/Admin/Reservation.cshtml
+++ b/AtkTennis/Views/Admin/Reservation.cshtml
@@ -8,11 +8,11 @@
 
 }
 
-<style>
+@*<style>
     .btn {
         width: -moz-available;
     }
-</style>
+</style>*@
 
 @{
     var userId = User.FindFirst(ClaimTypes.NameIdentifier).Value;
