--- a/AtkTennisWeb/Views/Home/Index.cshtml
+++ b/AtkTennisWeb/Views/Home/Index.cshtml
@@ -80,9 +80,21 @@
                     <!-- small box -->
                     <div class="small-box bg-success">
                         <div class="inner">
-                            <h3>53<sup style="font-size: 20px">%</sup></h3>
+                            @*<h3>53<sup style="font-size: 20px">%</sup></h3>*@
 
-                            <p>Bounce Rate</p>
+                            <h3>
+
+                                @if (Model.TodayResCount == null)
+                                {
+                                    @Html.Raw("-") ;
+                                }
+
+                                else
+
+                                    @Model.TodayResCount
+
+                            </h3>
+                            <p>Bugüne Ait Rezervasyon Sayısı</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
@@ -95,9 +107,20 @@
                     <!-- small box -->
                     <div class="small-box bg-danger">
                         <div class="inner">
-                            <h3>65</h3>
+                            <h3>
 
-                            <p>Unique Visitors</p>
+                                @if (Model.TotalResCount == null)
+                                {
+                                    @Html.Raw("-") ;
+                                }
+
+                                else
+
+                                    @Model.TotalResCount
+
+                            </h3>
+
+                            <p>Toplam Rezervasyon Sayısı</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-pie-graph"></i>
@@ -145,79 +168,61 @@
                             </div>
                         </div><!-- /.card-body -->
                     </div>
+                  
                     <!-- /.card -->
-
                     <!-- TO DO List -->
                     <div class="card">
                         <div class="card-header">
                             <h3 class="card-title">
                                 <i class="ion ion-clipboard mr-1"></i>
-                                To Do List
+                                Yapılacaklar Listesi
                             </h3>
 
                             <div class="card-tools">
-                                <ul class="pagination pagination-sm">
-                                    <li class="page-item"><a href="#" class="page-link">&laquo;</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">1</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">3</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">&raquo;</a></li>
-                                </ul>
+                                <button type="button" class="btn btn-info float-right"><i class="fas fa-save"></i></button>
                             </div>
+
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
                             <ul class="todo-list" data-widget="todo-list">
-                                <li>
-                                    <span class="handle">
-                                        <i class="fas fa-ellipsis-v"></i>
-                                        <i class="fas fa-ellipsis-v"></i>
-                                    </span>
 
-                                    <div class="icheck-primary d-inline ml-2">
-                                        <input type="checkbox" value="" name="todo2" id="todoCheck2" checked>
-                                        <label for="todoCheck2"></label>
-                                    </div>
+                                @foreach (var item in Model.toDoLists)
+                                {
+                                    <li>
+                                        <span class="handle">
+                                            <i class="fas fa-ellipsis-v"></i>
+                                            <i class="fas fa-ellipsis-v"></i>
+                                        </span>
 
-                                    <span class="text">Make the theme responsive</span>
-                                    <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
-                                    <div class="tools">
-                                        <i class="fas fa-edit"></i>
-                                        <i class="fas fa-trash"></i>
-                                    </div>
-                                </li>
-                              
-                                <li>
-                                    <span class="handle">
-                                        <i class="fas fa-ellipsis-v"></i>
-                                        <i class="fas fa-ellipsis-v"></i>
-                                    </span>
+                                        <div class="icheck-primary d-inline ml-2">
+                                            <input type="checkbox" value="" name="t_@item.ListId" id="@item.ListId">
+                                            <label for="@item.ListId"></label>
+                                        </div>
 
-                                    <div class="icheck-primary d-inline ml-2">
-                                        <input type="checkbox" value="" name="todo6" id="todoCheck6">
-                                        <label for="todoCheck6"></label>
-                                    </div>
+                                        <span class="text">@item.ToDo</span>
+                                        <small class="badge badge-secondary"><i class="far fa-clock"></i>@item.Date</small>
+                                        <div class="tools">
+                                            <i class="fas fa-edit"></i>
+                                            <i class="fas fa-trash"></i>
+                                        </div>
+                                    </li>
+                                }
 
-                                    <span class="text">Let theme shine like a star</span>
-                                    <small class="badge badge-secondary"><i class="far fa-clock"></i> 1 month</small>
-                                    <div class="tools">
-                                        <i class="fas fa-edit"></i>
-                                        <i class="fas fa-trash"></i>
-                                    </div>
-                                </li>
+
                             </ul>
                         </div>
                         <!-- /.card-body -->
                         <div class="card-footer clearfix">
-                            <button type="button" class="btn btn-info float-right"><i class="fas fa-plus"></i> Add item</button>
+                            <button type="button" class="btn btn-info float-right"><i class="fas fa-plus"></i>Ekle</button>
                         </div>
                     </div>
                     <!-- /.card -->
                 </section>
                 <!-- /.Left col -->
                 <!-- right col (We are only adding the ID to make the widgets sortable)-->
-               
-                <section class="col-lg-5 connectedSortable">       
+
+                <section class="col-lg-5 connectedSortable">
                     <!-- solid sales graph -->
                     <div class="card bg-gradient-info">
                         <div class="card-header border-0">
