Reservasyon Modal Fiyatlar , dashboard yenilik

--- a/AtkTennisWeb/wwwroot/adminRoot/css/adminlte.css
+++ b/AtkTennisWeb/wwwroot/adminRoot/css/adminlte.css
@@ -32958,3 +32958,36 @@ a.text-muted:hover {
 
 
 
+.progress1 {
+    background: rgba(0, 0, 0, 0.1);
+    justify-content: flex-start;
+    border-radius: 100px;
+    align-items: center;
+    position: relative;
+    padding: 0 0px;
+    display: flex;
+    height: 20px;
+    width: 100%;
+}
+
+.progress-value1 {
+    animation: load 3s normal forwards;
+    box-shadow: 0 10px 40px -10px #fff;
+    border-radius: 100px;
+    background: #e03c83;
+    height: 20px;
+    width: 0;
+}
+
+    .progress-value1 span {
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        display: block;
+    }
+
+@keyframes load {
+    0% {
+        width: 0;
+    }
+}
