--- a/AtkTennisWeb/Views/Home/Index.cshtml
+++ b/AtkTennisWeb/Views/Home/Index.cshtml
@@ -9,31 +9,28 @@
 
 <div class="content-wrapper">
 
-    <!-- Content Header (Page header) -->
+   
     <div class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
                     <h1 class="m-0">Dashboard</h1>
-                </div><!-- /.col -->
+                </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li class="breadcrumb-item active">Dashboard v1</li>
                     </ol>
-                </div><!-- /.col -->
-            </div><!-- /.row -->
-        </div><!-- /.container-fluid -->
+                </div>
+            </div>
+        </div>
     </div>
 
-    <!-- /.content-header -->
-    <!-- Main content -->
+   
     <section class="content">
-        <div class="container-fluid">
-            <!-- Small boxes (Stat box) -->
+        <div class="container-fluid">      
             <div class="row">
-                <div class="col-lg-3 col-6">
-                    <!-- small box -->
+                <div class="col-lg-3 col-6">                   
                     <div class="small-box bg-warning">
                         <div class="inner">
                             <h3>
@@ -55,9 +52,9 @@
                         <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
-                <!-- ./col -->
+              
                 <div class="col-lg-3 col-6">
-                    <!-- small box -->
+                 
                     <div class="small-box bg-info">
                         <div class="inner">
                             <h3>
@@ -75,9 +72,9 @@
                         <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
-                <!-- ./col -->
+             
                 <div class="col-lg-3 col-6">
-                    <!-- small box -->
+                  
                     <div class="small-box bg-success">
                         <div class="inner">
                             @*<h3>53<sup style="font-size: 20px">%</sup></h3>*@
@@ -102,9 +99,9 @@
                         <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
-                <!-- ./col -->
+               
                 <div class="col-lg-3 col-6">
-                    <!-- small box -->
+                   
                     <div class="small-box bg-danger">
                         <div class="inner">
                             <h3>
@@ -128,63 +125,23 @@
                         <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
-                <!-- ./col -->
+               
             </div>
-            <!-- /.row -->
-            <!-- Main row -->
-            <div class="row">
-                <!-- Left col -->
+          
+            <div class="row">              
                 <section class="col-lg-7 connectedSortable">
-
-
-                    <!-- Custom tabs (Charts with tabs)-->
-                    <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">
-                                <i class="fas fa-chart-pie mr-1"></i>
-                                Sales
-                            </h3>
-                            <div class="card-tools">
-                                <ul class="nav nav-pills ml-auto">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#revenue-chart" data-toggle="tab">Area</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#sales-chart" data-toggle="tab">Donut</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div><!-- /.card-header -->
-                        <div class="card-body">
-                            <div class="tab-content p-0">
-                                <!-- Morris chart - Sales -->
-                                <div class="chart tab-pane active" id="revenue-chart"
-                                     style="position: relative; height: 300px;">
-                                    <canvas id="revenue-chart-canvas" height="300" style="height: 300px;"></canvas>
-                                </div>
-                                <div class="chart tab-pane" id="sales-chart" style="position: relative; height: 300px;">
-                                    <canvas id="sales-chart-canvas" height="300" style="height: 300px;"></canvas>
-                                </div>
-                            </div>
-                        </div><!-- /.card-body -->
-                    </div>
-                  
-                    <!-- /.card -->
-                    <!-- TO DO List -->
-                    <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">
-                                <i class="ion ion-clipboard mr-1"></i>
-                                Yapılacaklar Listesi
-                            </h3>
+                   
+                    <div class="card card-info">
+                        <div class="card-header" style="background-color:darkmagenta">
+                            <h3 class="card-title"><i style="margin-right:10px" class="fas fa-tasks"></i>Yapılacak Listesi </h3>
 
                             <div class="card-tools">
-                                <button type="button" class="btn btn-info float-right"><i class="fas fa-save"></i></button>
+                                <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
+                                    <i class="fas fa-minus"></i>
+                                </button>
                             </div>
-
                         </div>
-                        <!-- /.card-header -->
-                        <div class="card-body">
+                        <div class="card-body p-0">
                             <ul class="todo-list" data-widget="todo-list">
 
                                 @foreach (var item in Model.toDoLists)
@@ -212,68 +169,13 @@
 
                             </ul>
                         </div>
-                        <!-- /.card-body -->
                         <div class="card-footer clearfix">
-                            <button type="button" class="btn btn-info float-right"><i class="fas fa-plus"></i>Ekle</button>
-                        </div>
+                            <button data-toggle="modal" data-target="#openToDoModal" style="background-color:darkmagenta; border-color:cornflowerblue" type="button" class="btn btn-info float-right"><i class="fas fa-plus"></i> Ekle</button>
+                        </div>                      
                     </div>
-                    <!-- /.card -->
-                </section>
-                <!-- /.Left col -->
-                <!-- right col (We are only adding the ID to make the widgets sortable)-->
 
-                <section class="col-lg-5 connectedSortable">
-                    <!-- solid sales graph -->
-                    <div class="card bg-gradient-info">
-                        <div class="card-header border-0">
-                            <h3 class="card-title">
-                                <i class="fas fa-th mr-1"></i>
-                                Sales Graph
-                            </h3>
 
-                            <div class="card-tools">
-                                <button type="button" class="btn bg-info btn-sm" data-card-widget="collapse">
-                                    <i class="fas fa-minus"></i>
-                                </button>
-                                <button type="button" class="btn bg-info btn-sm" data-card-widget="remove">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <canvas class="chart" id="line-chart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
-                        </div>
-                        <!-- /.card-body -->
-                        <div class="card-footer bg-transparent">
-                            <div class="row">
-                                <div class="col-4 text-center">
-                                    <input type="text" class="knob" data-readonly="true" value="20" data-width="60" data-height="60"
-                                           data-fgColor="#39CCCC">
-
-                                    <div class="text-white">Mail-Orders</div>
-                                </div>
-                                <!-- ./col -->
-                                <div class="col-4 text-center">
-                                    <input type="text" class="knob" data-readonly="true" value="50" data-width="60" data-height="60"
-                                           data-fgColor="#39CCCC">
-
-                                    <div class="text-white">Online</div>
-                                </div>
-                                <!-- ./col -->
-                                <div class="col-4 text-center">
-                                    <input type="text" class="knob" data-readonly="true" value="30" data-width="60" data-height="60"
-                                           data-fgColor="#39CCCC">
-
-                                    <div class="text-white">In-Store</div>
-                                </div>
-                                <!-- ./col -->
-                            </div>
-                            <!-- /.row -->
-                        </div>
-                        <!-- /.card-footer -->
-                    </div>
-                    <!-- /.card -->
-                    <!-- Calendar -->
+                    
                     <div class="card bg-gradient-success">
                         <div class="card-header border-0">
 
@@ -281,9 +183,8 @@
                                 <i class="far fa-calendar-alt"></i>
                                 Calendar
                             </h3>
-                            <!-- tools card -->
-                            <div class="card-tools">
-                                <!-- button with a dropdown -->
+                           
+                            <div class="card-tools">                               
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-success btn-sm dropdown-toggle" data-toggle="dropdown" data-offset="-52">
                                         <i class="fas fa-bars"></i>
@@ -302,25 +203,74 @@
                                     <i class="fas fa-times"></i>
                                 </button>
                             </div>
-                            <!-- /. tools -->
+                           
                         </div>
-                        <!-- /.card-header -->
+                        
                         <div class="card-body pt-0">
-                            <!--The calendar -->
+                           
                             <div id="calendar" style="width: 100%"></div>
-                        </div>
-                        <!-- /.card-body -->
-                    </div>
-                    <!-- /.card -->
+                        </div>                   
+                    </div>                    
                 </section>
-                <!-- right col -->
-            </div>
-            <!-- /.row (main row) -->
-        </div><!-- /.container-fluid -->
+
+
+
+                <section class="col-lg-5 connectedSortable">
+                    <div class="card card-info">
+                        <div class="card-header">
+                            <h3 class="card-title"><i style="margin-right:10px" class="fas fa-chart-pie mr-1"></i>Kort Doluluk Oranları </h3>
+
+                            <div class="card-tools">
+                                <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="card-body p-0">
+                            <table style="text-align:center" class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Kortlar</th>
+                                        <th>Doluluk Oranı</th>
+
+                                    </tr>
+                                </thead>
+                                <tbody>
+
+                                    @{
+                                        DateTime date1 = DateTime.Now;
+                                        var today = date1.ToString("yyyy-MM-dd");
+                                    }
+
+
+                                    @foreach (var item2 in Model.courts)
+                                    {
+
+                                        var a = Model.reservations.Where(x => x.Court.CourtId == item2.CourtId && x.ResDate == today).ToList();
+                                        var count = a.Count();
+                                        var percent = (count * 100) / 17;
+                                        <tr>
+                                            <td>@item2.CourtName</td>
+                                            <td>
+
+                                                <div class="progress1">
+                                                    <div class="progress-value1" style="width: @percent%"><span>@percent%</span></div>
+                                                </div>
+
+                                            </td>
+                                        </tr>
+                                    }
+
+                                </tbody>
+                            </table>
+                        </div>                    
+                    </div>                
+                </section>             
+            </div>            
+        </div>
     </section>
-    <!-- /.content -->
 </div>
-<!-- /.content-wrapper -->
+
 
 <footer class="main-footer">
     <strong>Copyright &copy; 2014-2020 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
@@ -331,7 +281,100 @@
 </footer>
 
 
+<!-- Modal -->
+<div class="modal fade" id="openToDoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Yapılacak Listesi</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="col-md-12 form-group">
+                    <input type="text" id="toDo" class="form-control" autocomplete="new-password">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+                <button type="button" class="btn btn-primary" onclick="addToDo()">Ekle</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
 
 
+<script>
+    function addToDo() {
+
+        var d = new Date();
+        var today = d.getDate() + "-" + (d.getMonth() + 1) + "-" + d.getFullYear();
+
+        if ($("#toDo").val() == "") {
+
+            swal({
+                title: "Uyarı !",
+                text: "Lütfen Eksizsiz Doldurunuz!",
+                icon: "warning",
+                button: "Tamam",
+            });
+        }
+
+        else {
+
+
+            $.ajax({
+                type: "POST",
+                url: '../Home/AddToDo',
+                cache: false,
+                data: { "toDo": $("#toDo").val(), "today": today },
+                dataType: "json",
+                async: true,
+                success: function (res) {
+
+
+                    if (res == true) {
+
+                        $('#openToDoModal').modal('toggle')
+
+                        swal({
+                            title: "Yapılacak Listesine Eklendi !",
+                            text: "İş Yükü Başarılı Bir Şekilde Eklendi !",
+                            icon: "success",
+                            button: "Tamam",
+                        }).then((value) => {
+
+                            window.location.href = "Index"
+
+                        });
+
+                    }
+
+                    else {
+                        $.confirm({
+                            title: "Uyarı",
+                            content: "Kayıt sırasında bir hata oluştu.",
+                            buttons: {
+                                TAMAM: function () {
+
+                                    window.location.href = "Index"
+                                }
+
+                            }
+                        });
+                    }
+
+                },
+
+                error: function (textStatus, errorThrown) {
+                    console.log(JSON.stringify(textStatus));
+                    console.log(textStatus);
+                }
+            });
+        }
+
+    }
+</script>
